--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <title> Potatoes </title>
 
 <head> 
-
+<style>
+</style>
 </head> 
 
 <body>
 
+	<p> Once a potato, always a potato </p>
+	<p> A potato </p>
+	<p> stares forlornly at potato stew. </p>
 	<p>  Little potato little potato </p>
 	<p> Cries a river </p>
 
