--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
 
-	<p> Once a potato, always a potato </p>
-	<p> A potato </p>
+	<p>  Little potato little potato </p>
+	<p> Cries a river </p>
 
 </body>
 
